# TiledImage

./: README.md  requirements.txt  setup.cfg  setup.py  test.py  test_vectors.py  test_video.py
TilImg/: __init__.py  __main__.py  errors.py  utils.py  video.py
TiledImage/: __init__.py  __main__.py  accelerated.py  core.py  utils.py  video.py
TiledImage/old/: __init__.py  accelerated.py  others.py
