[metadata]
name = TiledImage
version = 1.9.1
author = ultraflame42
author_email = ultraflame4@gmail.com
description = 'Make image, from images',
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ultraflame4/TiledImage
project_urls =
    Bug Tracker = https://github.com/ultraflame4/TiledImage/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
install_requires=
    tqdm>=4.62.0
    Pillow>=8.3.1
    fire>=0.4.0
    opencv-python>=4.5.4.60
    numba>=0.54.1
    numpy>=1.20.3
    scipy>=1.7.2