[metadata]
name = TilImg
version = attr: TiledImage.__version__
author = ultraflame42
author_email = ultraflame4@gmail.com
description = 'Make image, from images',
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ultraflame4/TiledImage
project_urls =
    Bug Tracker = https://github.com/ultraflame4/TiledImage/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
install_requires=
    tqdm>=4.62.0
    Pillow>=8.3.1
    numba>=0.54.1
    numpy>=1.20.3
    scipy>=1.7.2
    rich>=12.6.0
    typer>=0.7.0
    opencv-python>=4.5.0

[options.entry_points]
console_scripts =
    timg = TiledImage.__main__:main